# jubileu-clone-twitter

./: .gitignore  README.md  create_table.py  dockerfile  nixpacks.toml  package-lock.json  procfile  railway.json  render.yaml  requirements.txt  static.json  twitter_clone.dump
backend/: .env  __init__.py  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_connection.py
backend/routes/: tweets.py  users.py
backend/static/: index.html
backend/static/assets/: index-f3c93972.css  index-f98b38b2.js
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: MobileSidebar.tsx  Perfil.tsx  PrivateRoute.tsx  Sidebar.tsx  SuggestionsSidebar.tsx
frontend/src/pages/: CreateTweet.tsx  Login.tsx  PasswordForgot.tsx  Signup.tsx  Timeline.tsx  login.jsx
frontend/src/pages/login/: login.jsx
